tests/ui/async-await/dyn/wrong-size.stderr
error[E0038]: the trait `AsyncTrait` is not dyn compatible
  --> $DIR/wrong-size.rs:21:17
   |
LL |     let x: &dyn AsyncTrait = &"hello, world!";
   |                 ^^^^^^^^^^ `AsyncTrait` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $DIR/wrong-size.rs:9:14
   |
LL | trait AsyncTrait {
   |       ---------- this trait is not dyn compatible...
LL |     async fn async_dispatch(&self);
   |              ^^^^^^^^^^^^^^ ...because method `async_dispatch` is `async`
   = help: consider moving `async_dispatch` to another trait
   = help: only type `&'static str` implements `AsyncTrait`; consider using it directly instead.

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0038`.
